--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "babel": {
     "presets": [
       "./node_modules/shakapacker/package/babel/preset.js",
-      "babel/preset-react"
+      "@babel/preset-react"
     ]
   },
   "browserslist": [
