--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression-webpack-plugin": "9",
     "css-loader": "^6.7.2",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "expose-loader": "^4.0.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
