--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -39,7 +39,7 @@ default: &default
 
 development:
   <<: *default
-  compile: true
+  compile: false
   compiler_strategy: mtime
 
   # Reference: https://webpack.js.org/configuration/dev-server/
@@ -80,7 +80,7 @@ development:
 
 test:
   <<: *default
-  compile: true
+  compile: false
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
